Added copper plate, amethst plate, gun and ammo